--- a/Save the Humans/Save the Humans/MainPage.xaml
+++ b/Save the Humans/Save the Humans/MainPage.xaml
@@ -13,6 +13,11 @@
     <Page.Resources>
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
         <x:String x:Key="AppName">Save the Humans</x:String>
+        <ControlTemplate x:Key="EnemyTemplate" TargetType="ContentControl">
+            <Grid>
+                <Ellipse Fill="#FFF00C0C" Height="100" Stroke="Black" Width="100"/>
+            </Grid>
+        </ControlTemplate>
     </Page.Resources>
 
     <!--
@@ -52,17 +57,37 @@
             <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
-        <Button x:Name="startButton" Content="Start!" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center"/>
-        <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="34,10,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Avoid These" VerticalAlignment="Top" Style="{StaticResource SubheaderTextBlockStyle}"/>
+        <Button x:Name="startButton" Content="Start!" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Click="startButton_Click"/>
+        <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="44,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Avoid These" VerticalAlignment="Top" Style="{StaticResource SubheaderTextBlockStyle}" Width="116"/>
         <ProgressBar Grid.Column="1" Grid.Row="2" Height="20"/>
-        <ContentControl Content="ContentControl" Grid.Column="2" HorizontalAlignment="Left" Margin="79,72,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-        <Canvas x:Name="playArea" Height="100" Grid.Row="1" Width="100" Grid.ColumnSpan="3">
+        <ContentControl Content="ContentControl" Grid.Column="2" HorizontalAlignment="Left" Margin="24,60,0,0" Grid.Row="2" VerticalAlignment="Top" Template="{StaticResource EnemyTemplate}"/>
+        <Canvas x:Name="playArea" Grid.Row="1" Grid.ColumnSpan="3" Height="468">
             <Canvas.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0.147"/>
                     <GradientStop Color="#FFC83D3D" Offset="1"/>
                 </LinearGradientBrush>
             </Canvas.Background>
+            <StackPanel x:Name="Human" Orientation="Vertical" UseLayoutRounding="True" Background="#00000000">
+                <Ellipse Fill="White" Height="10" Width="10"/>
+                <Rectangle Fill="White" Height="25" Width="10"/>
+            </StackPanel>
+            <TextBlock x:Name="GameOverText" TextWrapping="Wrap" FontFamily="Arial Black" FontSize="100" FontWeight="Bold" FontStyle="Italic" Canvas.Left="420" Canvas.Top="175">
+            	<Run Text="Game Over"/>
+            	<LineBreak/>
+            	<Run/>
+            </TextBlock>
+            <Rectangle Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="834.645" Canvas.Top="109.289" UseLayoutRounding="False" d:LayoutRounding="Auto">
+                <Rectangle.RenderTransform>
+                    <CompositeTransform Rotation="45"/>
+                </Rectangle.RenderTransform>
+                <Rectangle.Fill>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="#FF6DEEE8" Offset="1"/>
+                    </LinearGradientBrush>
+                </Rectangle.Fill>
+            </Rectangle>
         </Canvas>
     </Grid>
 </Page>
