--- a/Save the Humans/Save the Humans/MainPage.xaml
+++ b/Save the Humans/Save the Humans/MainPage.xaml
@@ -15,7 +15,17 @@
         <x:String x:Key="AppName">Save the Humans</x:String>
         <ControlTemplate x:Key="EnemyTemplate" TargetType="ContentControl">
             <Grid>
-                <Ellipse Fill="#FFF00C0C" Height="100" Stroke="Black" Width="100"/>
+                <Ellipse Fill="Gray" Height="100" Stroke="Black" Width="75"/>
+                <Ellipse Fill="Black" HorizontalAlignment="Center" Height="35" Stroke="Black" VerticalAlignment="Top" Width="25" RenderTransformOrigin="0.5,0.5" Margin="40,20,70,0">
+                    <Ellipse.RenderTransform>
+                        <CompositeTransform SkewX="10"/>
+                    </Ellipse.RenderTransform>
+                </Ellipse>
+                <Ellipse Fill="Black" HorizontalAlignment="Center" Height="35" Stroke="Black" VerticalAlignment="Top" Width="25" RenderTransformOrigin="0.5,0.5" Margin="70,20,40,0" UseLayoutRounding="False" d:LayoutRounding="Auto">
+                    <Ellipse.RenderTransform>
+                        <CompositeTransform SkewX="-10"/>
+                    </Ellipse.RenderTransform>
+                </Ellipse>
             </Grid>
         </ControlTemplate>
     </Page.Resources>
@@ -43,7 +53,7 @@
         </Grid.RowDefinitions>
 
         <!-- Back button and page title -->
-        <Grid Grid.ColumnSpan="3">
+        <Grid x:Name="grid" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="*"/>
@@ -58,17 +68,17 @@
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
         <Button x:Name="startButton" Content="Start!" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Click="startButton_Click"/>
-        <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="44,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Avoid These" VerticalAlignment="Top" Style="{StaticResource SubheaderTextBlockStyle}" Width="116"/>
-        <ProgressBar Grid.Column="1" Grid.Row="2" Height="20"/>
+        <TextBlock x:Name="gameOverText" Grid.Column="2" HorizontalAlignment="Left" Margin="44,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Avoid These" VerticalAlignment="Top" Style="{StaticResource SubheaderTextBlockStyle}" Width="116"/>
+        <ProgressBar x:Name="progressBar" Grid.Column="1" Grid.Row="2" Height="20"/>
         <ContentControl Content="ContentControl" Grid.Column="2" HorizontalAlignment="Left" Margin="24,60,0,0" Grid.Row="2" VerticalAlignment="Top" Template="{StaticResource EnemyTemplate}"/>
-        <Canvas x:Name="playArea" Grid.Row="1" Grid.ColumnSpan="3" Height="468">
+        <Canvas x:Name="playArea" Grid.Row="1" Grid.ColumnSpan="3" Height="468" PointerMoved="playArea_PointerMoved" PointerExited="playArea_PointerExited">
             <Canvas.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0.147"/>
                     <GradientStop Color="#FFC83D3D" Offset="1"/>
                 </LinearGradientBrush>
             </Canvas.Background>
-            <StackPanel x:Name="Human" Orientation="Vertical" UseLayoutRounding="True" Background="#00000000">
+            <StackPanel x:Name="human" Orientation="Vertical" UseLayoutRounding="True" Background="#00000000" PointerPressed="human_PointerPressed">
                 <Ellipse Fill="White" Height="10" Width="10"/>
                 <Rectangle Fill="White" Height="25" Width="10"/>
             </StackPanel>
@@ -77,7 +87,7 @@
             	<LineBreak/>
             	<Run/>
             </TextBlock>
-            <Rectangle Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="834.645" Canvas.Top="109.289" UseLayoutRounding="False" d:LayoutRounding="Auto">
+            <Rectangle x:Name="target" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="317.096" Canvas.Top="116.827" UseLayoutRounding="False" d:LayoutRounding="Auto" PointerEntered="target_PointerEntered">
                 <Rectangle.RenderTransform>
                     <CompositeTransform Rotation="45"/>
                 </Rectangle.RenderTransform>
