--- a/fromBasics/fromBasics/MainPage.xaml
+++ b/fromBasics/fromBasics/MainPage.xaml
@@ -17,11 +17,11 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="button1" Content="Show a message" HorizontalAlignment="Center" Margin="157,114,154,104" Click="button1_Click"/>
-        <Button x:Name="button2" Content="If/else" Grid.Column="1" HorizontalAlignment="Center" Margin="312,124,295,94" Click="button2_Click"/>
-        <Button x:Name="button3" Content="Another conditional test" HorizontalAlignment="Center" Margin="219,116,268,102" Grid.Row="1"  Click="button3_Click"/>
-        <Button x:Name="button4" Content="A loop" Grid.Column="1" HorizontalAlignment="Center" Margin="331,126,273,92" Grid.Row="1"  Click="Button_Click"/>
-        <TextBlock x:Name="myLabel" HorizontalAlignment="Center" Margin="650,138,658,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" Style="{StaticResource BodyTextBlockStyle}" Grid.ColumnSpan="2"/>
+        <Button x:Name="button1" Content="Show a message" HorizontalAlignment="Center" Click="button1_Click"/>
+        <Button x:Name="button2" Content="If/else" Grid.Column="1" HorizontalAlignment="Center" Click="button2_Click"/>
+        <Button x:Name="button3" Content="Another conditional test" HorizontalAlignment="Center" Grid.Row="1"  Click="button3_Click"/>
+        <Button x:Name="button4" Content="A loop" Grid.Column="1" HorizontalAlignment="Center"  Grid.Row="1"  Click="button4_Click"/>
+        <TextBlock x:Name="myLabel" HorizontalAlignment="Center"  Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" Style="{StaticResource BodyTextBlockStyle}" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Page>
