--- a/HeadFirst_Csharp/AgainSaveTheHumans/AgainSaveTheHumans/MainPage.xaml
+++ b/HeadFirst_Csharp/AgainSaveTheHumans/AgainSaveTheHumans/MainPage.xaml
@@ -62,7 +62,7 @@
             <TextBlock Grid.Column="2" Grid.Row="2" TextWrapping="Wrap" Text="Avoid These" Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <ContentControl Content="ContentControl" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Template="{StaticResource EnemyTemplate}"/>
         </StackPanel>
-        <ProgressBar Grid.Column="1" Grid.Row="2" Height="20"/>
+        <ProgressBar x:Name="progressBar" Grid.Column="1" Grid.Row="2" Height="20"/>
         <Canvas x:Name="playArea" Grid.Row="1" Grid.ColumnSpan="9">
             <Canvas.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -74,7 +74,7 @@
                 <Ellipse Fill="White" Height="10" Width="10"/>
                 <Rectangle Fill="White" Height="25" Width="10"/>
             </StackPanel>
-            <TextBlock x:Name="GameOverText" Canvas.Left="419" TextWrapping="Wrap" Text="Game Over" Canvas.Top="165" FontFamily="Arial Black" FontSize="100" FontStyle="Italic" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <TextBlock x:Name="gameOverText" Canvas.Left="419" TextWrapping="Wrap" Text="Game Over" Canvas.Top="165" FontFamily="Arial Black" FontSize="100" FontStyle="Italic" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             <Rectangle x:Name="target" Height="50" Canvas.Left="905.277" Canvas.Top="126.784" Width="50" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" d:LayoutRounding="Auto">
                 <Rectangle.RenderTransform>
                     <CompositeTransform Rotation="45"/>
