--- a/HeadFirst_Csharp/AgainSaveTheHumans/AgainSaveTheHumans/MainPage.xaml
+++ b/HeadFirst_Csharp/AgainSaveTheHumans/AgainSaveTheHumans/MainPage.xaml
@@ -15,7 +15,17 @@
         <x:String x:Key="AppName">Save the Humans : Again</x:String>
         <ControlTemplate x:Key="EnemyTemplate" TargetType="ContentControl">
             <Grid>
-                <Ellipse Fill="#FFEE1818" Height="100" Stroke="Black" Width="100"/>
+                <Ellipse Fill="#FFEE1818" Height="100" Stroke="Black" Width="75"/>
+                <Ellipse Fill="#FF0F0E0E" HorizontalAlignment="Center" Height="35" Margin="40,20,70,0" Stroke="Black" VerticalAlignment="Top" Width="25" RenderTransformOrigin="0.5,0.5">
+                    <Ellipse.RenderTransform>
+                        <CompositeTransform SkewX="10"/>
+                    </Ellipse.RenderTransform>
+                </Ellipse>
+                <Ellipse Fill="#FF0F0E0E" HorizontalAlignment="Center" Height="35" Margin="70,20,40,0" Stroke="Black" VerticalAlignment="Top" Width="25" RenderTransformOrigin="0.5,0.5">
+                    <Ellipse.RenderTransform>
+                        <CompositeTransform SkewX="-10"/>
+                    </Ellipse.RenderTransform>
+                </Ellipse>
             </Grid>
         </ControlTemplate>
     </Page.Resources>
