--- a/HeadFirst_Csharp/AgainGoFish/AgainGoFish/MainPage.xaml
+++ b/HeadFirst_Csharp/AgainGoFish/AgainGoFish/MainPage.xaml
@@ -46,17 +46,16 @@
             <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
-        
+
         <Grid Grid.Row="1" Margin="120,0,60,60">
             <TextBlock Text="Your Name" Margin="0,0,0,20" Style="{StaticResource SubheaderTextBlockStyle}"/>
             <StackPanel Orientation="Horizontal" Grid.Row="1">
                 <TextBox x:Name="playerName" FontSize="24" Width="500" MinWidth="500"/>
                 <Button x:Name="startButton" Content="Start the Game!" Margin="20,0"/>
             </StackPanel>
-            <TextBlock HorizontalAlignment="Left" Margin="124,163,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+            <TextBlock Grid.Row="2" Text="Game progress" Margin="0,20,0,20" Style="{StaticResource SubheaderTextBlockStyle}"/>
             <TextBlock HorizontalAlignment="Left" Margin="124,404,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-            
-            <ScrollViewer HorizontalAlignment="Left" Height="100" Margin="142,208,0,0" Grid.Row="1" VerticalAlignment="Top" Width="100"/>
+            <ScrollViewer Grid.Row="3" Width="100" FontSize="24" Background="White" Foreground="Black"/>
             <ScrollViewer HorizontalAlignment="Left" Height="100" Margin="142,470,0,0" Grid.Row="1" VerticalAlignment="Top" Width="100"/>
             <TextBlock HorizontalAlignment="Left" Margin="764,51,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
             <ScrollViewer HorizontalAlignment="Left" Height="100" Margin="764,141,0,0" Grid.Row="1" VerticalAlignment="Top" Width="100"/>
