--- a/HeadFirst_Csharp/AgainGoFish/AgainGoFish/MainPage.xaml
+++ b/HeadFirst_Csharp/AgainGoFish/AgainGoFish/MainPage.xaml
@@ -50,11 +50,11 @@
         <Grid Grid.Row="1" Margin="120,0,60,60">
             <TextBlock Text="Your Name" Margin="0,0,0,20" Style="{StaticResource SubheaderTextBlockStyle}"/>
             <StackPanel Orientation="Horizontal" Grid.Row="1">
-                <TextBox x:Name="playerName" FontSize="24" Width="500" MinWidth="500"/>
+                <TextBox x:Name="playerName" FontSize="24" Width="500" MinWidth="300"/>
                 <Button x:Name="startButton" Content="Start the Game!" Margin="20,0"/>
             </StackPanel>
-            <TextBlock Grid.Row="2" Text="Game progress" Margin="0,20,0,20" Style="{StaticResource SubheaderTextBlockStyle}"/>
-            <ScrollViewer Grid.Row="3" Width="100" FontSize="24" Background="White" Foreground="Black"/>
+            <TextBlock Grid.Row="2" Text="Game progress" Margin="0,20,0,20" Style="{StaticResource SubheaderTextBlockStyle}" FontFamily="Global User Interface"/>
+            <ScrollViewer Grid.Row="3" FontSize="24" Background="White" Foreground="Black"/>
             <TextBlock Grid.Row="4" Text="Books" Padding="0,20,0,20" Style="{StaticResource SubheaderTextBlockStyle}"/>
             <ScrollViewer Grid.Row="5" FontSize="24" Grid.RowSpan="2" Background="White" Foreground="Black"/>
             <TextBlock Text="Your hand" Grid.Row="0" Style="{StaticResource SubheaderTextBlockStyle}" Grid.Column="2" Margin="0,0,0,20" FontFamily="Global User Interface"/>
@@ -72,8 +72,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto" MinHeight="150"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
         </Grid>
     </Grid>
