filled Lumberjack XAML

--- a/HeadFirst_Csharp/AgainLumberjack/AgainLumberjack/MainPage.xaml
+++ b/HeadFirst_Csharp/AgainLumberjack/AgainLumberjack/MainPage.xaml
@@ -31,6 +31,55 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <Grid Grid.Row="1" Margin="120,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            <TextBlock Text="Lumberjack name" Margin="0,0,0,10" Style="{StaticResource BodyTextBlockStyle}"/>
+            <TextBox Grid.Row="1"/>
+            
+            <TextBlock Grid.Row="2" Text="Breakfast line" Margin="0,20,0,10" Style="{StaticResource BodyTextBlockStyle}"/>
+            
+            <ListBox Grid.Row="3">
+                <ListBoxItem Content="1. Ed"/>
+                <ListBoxItem Content="2. Billy"/>
+                <ListBoxItem Content="3. Jones"/>
+                <ListBoxItem Content="4. Fred"/>
+                <ListBoxItem Content="5. Johansen"/>
+                <ListBoxItem Content="6. Bobby, Jr."/>
+            </ListBox>
+            
+            <TextBlock Grid.Row="4" Text="Feed a lumberjack" Margin="0,20,0,10" Style="{StaticResource BodyTextBlockStyle}"/>
+            
+            <StackPanel Grid.Row="5" Orientation="Horizontal">
+                <TextBox Text="2" Margin="0,0,20,0"/>
+                <ComboBox SelectedIndex="0" Margin="0,0,20,0">
+                    <ComboBoxItem Content="Crispy"/>
+                    <ComboBoxItem Content="Soggy"/>
+                    <ComboBoxItem Content="Browned"/>
+                    <ComboBoxItem Content="Banana"/>
+                </ComboBox>
+                <Button Content="Add flapjacks" Style="{StaticResource TextBlockButtonStyle}"/>
+            </StackPanel>
+            
+            <ScrollViewer Grid.Row="6" Margin="0,20,0,0" Content="Ed has 7 flapjacks" BorderThickness="2" BorderBrush="White"/>
+            
+            <StackPanel Grid.Row="7" Orientation="Horizontal" Margin="0,40,0,0">
+                <Button Content="Add Lumberjack" Margin="0,0,20,0"/>
+                <Button Content="Next Lumberjack" />
+            </StackPanel>
+        </Grid>
+        
         <!-- Back button and page title -->
         <Grid>
             <Grid.ColumnDefinitions>
