--- a/HeadFirst_Csharp/AgainGoFish/AgainGoFish/MainPage.xaml
+++ b/HeadFirst_Csharp/AgainGoFish/AgainGoFish/MainPage.xaml
@@ -11,6 +11,7 @@
     mc:Ignorable="d">
 
     <Page.Resources>
+        
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
         <x:String x:Key="AppName">Go Fish!</x:String>
     </Page.Resources>
@@ -51,7 +52,7 @@
             <TextBlock Text="Your Name" Margin="0,0,0,20" Style="{StaticResource SubheaderTextBlockStyle}"/>
             <StackPanel Orientation="Horizontal" Grid.Row="1">
                 <TextBox x:Name="playerName" FontSize="24" Width="500" MinWidth="300"/>
-                <Button x:Name="startButton" Content="Start the Game!" Margin="20,0"/>
+                <Button x:Name="startButton" Content="Start the Game!" Margin="20,0" Click="startButton_Click"/>
             </StackPanel>
             <TextBlock Grid.Row="2" Text="Game progress" Margin="0,20,0,20" Style="{StaticResource SubheaderTextBlockStyle}" FontFamily="Global User Interface"/>
             <ScrollViewer Grid.Row="3" FontSize="24" Background="White" Foreground="Black"/>
@@ -59,7 +60,7 @@
             <ScrollViewer Grid.Row="5" FontSize="24" Grid.RowSpan="2" Background="White" Foreground="Black"/>
             <TextBlock Text="Your hand" Grid.Row="0" Style="{StaticResource SubheaderTextBlockStyle}" Grid.Column="2" Margin="0,0,0,20" FontFamily="Global User Interface"/>
             <ListBox x:Name="Cards" Background="#CCFFFFFF" FontSize="24" Margin="0,0,0,20" Grid.Row="1" Grid.RowSpan="5" Grid.Column="2"/>
-            <Button x:Name="askForACard" Content="Ask for a card" HorizontalAlignment="Stretch" Grid.Row="6" VerticalAlignment="Stretch" Grid.Column="2"/>
+            <Button x:Name="askForACard" Content="Ask for a card" HorizontalAlignment="Stretch" Grid.Row="6" VerticalAlignment="Stretch" Grid.Column="2" Click="askForACard_Click"/>
             <ScrollViewer HorizontalAlignment="Left" Height="100" Margin="764,141,0,0" Grid.Row="1" VerticalAlignment="Top" Width="100"/>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5*"/>
