--- a/HeadFirst_Csharp/AgainGoFish/AgainGoFish/MainPage.xaml
+++ b/HeadFirst_Csharp/AgainGoFish/AgainGoFish/MainPage.xaml
@@ -60,7 +60,7 @@
             <TextBlock Grid.Row="4" Text="Books" Padding="0,20,0,20" Style="{StaticResource SubheaderTextBlockStyle}"/>
             <ScrollViewer Grid.Row="5" FontSize="24" Grid.RowSpan="2" Background="White" Foreground="Black" Content="{Binding Books}"/>
             <TextBlock Text="Your hand" Grid.Row="0" Style="{StaticResource SubheaderTextBlockStyle}" Grid.Column="2" Margin="0,0,0,20" FontFamily="Global User Interface"/>
-            <ListBox x:Name="Cards" Background="#CCFFFFFF" FontSize="24" Margin="0,0,0,20" Grid.Row="1" Grid.RowSpan="5" Grid.Column="2" ItemsSource="{Binding Hand}" IsEnabled="{Binding GameInProgress}" DoubleTapped="Cards_DoubleTapped"/>
+            <ListBox x:Name="cards" Background="#CCFFFFFF" FontSize="24" Margin="0,0,0,20" Grid.Row="1" Grid.RowSpan="5" Grid.Column="2" ItemsSource="{Binding Hand}" IsEnabled="{Binding GameInProgress}" DoubleTapped="Cards_DoubleTapped"/>
             <Button x:Name="askForACard" Content="Ask for a card" HorizontalAlignment="Stretch" Grid.Row="6" VerticalAlignment="Stretch" Grid.Column="2" Click="askForACard_Click" IsEnabled="{Binding GameInProgress}"/>
             <ScrollViewer HorizontalAlignment="Left" Height="100" Margin="764,141,0,0" Grid.Row="1" VerticalAlignment="Top" Width="100"/>
             <Grid.ColumnDefinitions>
