--- a/HeadFirst_Csharp/TextEditorXAML/TextEditorXAML/MainPage.xaml
+++ b/HeadFirst_Csharp/TextEditorXAML/TextEditorXAML/MainPage.xaml
@@ -43,13 +43,15 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
-                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <TextBlock x:Name="filename" Margin="10" Style="{StaticResource TitleTextBlockStyle}">
                 Untitled
             </TextBlock>
             <Border Margin="10" Grid.Row="1">
-                <TextBox x:Name="text" AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Visible" TextChanged="text_TextChanged"/>
+                <TextBox x:Name="text" AcceptsReturn="True" 
+                         ScrollViewer.VerticalScrollBarVisibility="Visible" 
+                         ScrollViewer.HorizontalScrollBarVisibility="Visible" 
+                         TextChanged="text_TextChanged"/>
             </Border>
         </Grid>
         
