--- a/HeadFirst_Csharp/GuyToXML/GuyToXML/MainPage.xaml
+++ b/HeadFirst_Csharp/GuyToXML/GuyToXML/MainPage.xaml
@@ -32,6 +32,52 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <Grid Grid.Row="1" DataContext="{StaticResource guyManager}" Margin="120,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            
+            <StackPanel>
+                <TextBlock Text="{Binding Joe}" Style="{StaticResource CaptionTextBlockStyle}" Margin="0,0,0,20"/>
+                <Button x:Name="WriteJoe" Content="Write Joe" Click="WriteJoe_Click"/>
+            </StackPanel>
+            
+            <StackPanel Grid.Column="1">
+                <TextBlock Text="{Binding Bob}" Style="{StaticResource CaptionTextBlockStyle}" Margin="0,0,0,20"/>
+                <Button x:Name="WriteBob" Content="Write Bob" Click="WriteBob_Click"/>
+            </StackPanel>
+            
+            <StackPanel Grid.Column="2">
+                <TextBlock Text="{Binding Ed}" Style="{StaticResource CaptionTextBlockStyle}" Margin="0,0,0,20"/>
+                <Button x:Name="WriteEd" Content="Write Ed" Click="WriteEd_Click"/>
+            </StackPanel>
+            
+            <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Margin="0,0,20,0">
+                <TextBlock>Last filename written</TextBlock>
+                <TextBox Text="{Binding Path, Mode=TwoWay}" Margin="0,0,0,20"/>
+                <TextBlock>Date created</TextBlock>
+                <TextBlock Text="{Binding LatestGuyFile.DateCreated}" Margin="0,0,0,20" Style="{StaticResource SubheaderTextBlockStyle}"/>
+                <TextBlock>Content type</TextBlock>
+                <TextBlock Text="{Binding LatestGuyFile.ContentType}" Style="{StaticResource SubheaderTextBlockStyle}"/>
+            </StackPanel> 
+            
+            <StackPanel Grid.Row="1" Grid.Column="2">
+                <Button x:Name="ReadNewGuy" Content="Read a new Guy" Click="ReadNewGuy_Click" Margin="0,10,0,0"/>
+                <TextBlock Style="{StaticResource CaptionTextBlockStyle}" Margin="0,0,0,20">
+                    <Run>New Guy: </Run>
+                    <Run Text="{Binding NewGuy}"/>
+                </TextBlock>
+            </StackPanel>
+        </Grid>
+        
+        
         <!-- Back button and page title -->
         <Grid>
             <Grid.ColumnDefinitions>
