--- a/HeadFirst_Csharp/JimmysApp/JimmysApp/QueryDetail.xaml
+++ b/HeadFirst_Csharp/JimmysApp/JimmysApp/QueryDetail.xaml
@@ -12,6 +12,7 @@
 
     <Page.Resources>
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
+        <local:ComicQueryManager x:Name="comicQueryManager"/>
         <x:String x:Key="AppName">My Application</x:String>
     </Page.Resources>
 
@@ -30,6 +31,34 @@
             <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+
+        <Grid Grid.Row="1" Margin="120,0" DataContext="{StaticResource ResourceKey=comicQueryManager}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" Text="Query results" Margin="10,0,0,20"/>
+            <ListView Grid.Row="1" Margin="0,-10,0,0" ItemsSource="{Binding CurrentQueryResults}" SelectionMode="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Margin="6">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Image Source="{Binding ImagePath}" Stretch="UniformToFill" />
+                            <StackPanel Grid.Column="1" Margin="10,0,0,0">
+                                <TextBlock Text="{Binding Title}" Style="{StaticResource TitleTextBlockStyle}"
+                                   TextWrapping="NoWrap" MaxHeight="40"/>
+                                <TextBlock Text="{Binding Subtitle}" Style="{StaticResource CaptionTextBlockStyle}"
+                                   TextWrapping="NoWrap"/>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+
 
         <!-- Back button and page title -->
         <Grid>
